fixed main structure layout issues

--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@
 }
 
 html {
-    overflow: hidden;
+    /* height: 100%; */
     font-size: 16px;
+    box-sizing: border-box;
 }
 
 a {
@@ -29,11 +30,13 @@ a:hover {
 }
 
 body {
-    box-sizing: border-box;
-    height: 100vh;
-    display: flex;
+    /* box-sizing: border-box; */
+    min-height: 100vh;
+    width: 100%;
+    /* display: flex; */
     font-family: 'Archivo', sans-serif;
-    background: linear-gradient(261deg, rgba(238,238,238,1) 0%, rgba(255,255,255,1) 50%, rgba(238,238,238,1) 100%); }
+    
+}
 
 .logo {
     display: flex;
@@ -46,21 +49,23 @@ body {
 
 .main-container {
     display: flex;
-    gap: 1.85rem;
-    width: 100%;
+    /* min-height: 100vh; */
 }
+
 
 /* Sidebar */
 .sidebar-container {
     background: linear-gradient(180deg, rgba(35,35,40,1) 0%, rgba(24,24,27,1) 100%);
-    height: 100vh;
+    min-height: 100%;
     width: 25rem;
     min-width: 10rem;
+    max-width: 23rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     color: #fef3c7;
     box-shadow: 1px 1px 8px 0px rgba(0,0,0,0.75);
+    align-content: stretch;
 }
 
 /* Sidebar - Top */
@@ -125,13 +130,15 @@ a.selected {
 .content-container {
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
-    gap: 5rem;
-    height: 100vh;
+    /* justify-content: space-around; */
+    align-items: center;
+    gap: 3rem;
+    height: 100%;
     width: 100%;
-    margin-right: 1.85rem;
     font-family: 'Signika Negative', sans-serif;
     font-size: 16px;
+    background: linear-gradient(261deg, rgba(238,238,238,1) 0%, rgba(255,255,255,1) 50%, rgba(238,238,238,1) 100%); 
+
 }
 
 /* Header */
@@ -141,6 +148,9 @@ a.selected {
     justify-content: space-between;
     align-items: center;
     font-size: 16px;
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 .header h1 {
@@ -167,6 +177,7 @@ a.selected {
 /* Chart */
 .chart-container {
     height: auto;
+    max-width: 50rem;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
@@ -191,18 +202,31 @@ a.selected {
     border: 2px solid #c3c3c3;
     border-radius: 5px;
     height: auto;
-    width: 100%;
+    width: 50rem;
     padding: 1rem;
 }
 
 .recent-searches-header {
     font-size: 1.2rem;
     padding-left: 1rem;
-    padding-bottom: .4rem;
     width: 100%;
     border-bottom: 1px solid rgb(148, 148, 148);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+/* Styles the small clear button */
+.small {
+    font-size: 12px;
+    color:rgb(148, 148, 148);
 }
 
+.small:hover {
+    color:rgb(45, 45, 45);
+    cursor: pointer;
+}
+
+/* Recent Searches */
 .recent-searches-list {
     display: flex;
     flex-direction: column;
@@ -217,8 +241,22 @@ a.selected {
     padding-left: .5rem;
     cursor: pointer;
     border-bottom: 1px solid rgb(231, 231, 231);
+    border-radius: 5px;
 }
 
 .street-name:hover {
     background-color: rgba(0,0,0,0.15);
+}
+
+/* Quick Actions */
+.quick-actions {
+    display: grid;
+    width: 550px;
+    grid-template-columns: 1fr 1fr;
+}
+
+.card {
+    width: 250px;
+    height: 250px;
+
 }
